--- a/src/main/webapp/views/assets/css/datbankhach.css
+++ b/src/main/webapp/views/assets/css/datbankhach.css
@@ -60,7 +60,7 @@
 
 .content_right_forminfo{
     width: 500px;
-    height: 600px;
+    height: auto;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
