--- a/src/main/webapp/views/Staff/css/detailconfirmban.css
+++ b/src/main/webapp/views/Staff/css/detailconfirmban.css
@@ -34,7 +34,7 @@
     height: auto;
     background-color: white;
     margin-top: 10px;
-    padding: 20px;
+    padding: 50px;
     position: absolute;
     right: 0;
     z-index: 0;
@@ -43,30 +43,27 @@
     border-top-right-radius: 10px; 
 }
 
-.body_right--banxacnhan{
-    width: 100%;
-    margin: 10px;
+.button_control{
+    position: absolute;
+    right: 45px;
+}
+.btn_submit{
+    width: 350px;
 }
 
-.body_right--header{
-    text-align: center;
-}
-
-.content_button{
-    margin: 10px;
-    float: left;
+.btn_exit{
+    width: 350px;
 }
 
 .buttonTable{
     width: 300px;
+    margin-right: 50px;
+    margin-top: 15px;
 }
 
-.body_right--info{
-    width: 100%;
-    height: 100px;
-}
-
-.info--confirm{
+.content_button{
     float: left;
-    margin-right: 25px;
+}
+.content_submit{
+    margin-bottom: 20px;
 }
