--- a/src/main/webapp/views/Staff/css/thongtincanhanstaff.css
+++ b/src/main/webapp/views/Staff/css/thongtincanhanstaff.css
@@ -31,7 +31,7 @@
 
 .body_right{
     width: 100%;
-    height: 660px;
+    height: auto;
     background-color: white;
     margin-top: 10px;
     padding: 20px;
@@ -50,7 +50,7 @@
 
 .changeInfo{
     width: 100%;
-    height: 500px;
+    height: auto;
     padding: 20px 50px 10px 50px;
 }
 
