lam giao dien guest và manager và fix giao dien khac

--- a/src/main/webapp/views/Staff/css/quanlymenustaff.css
+++ b/src/main/webapp/views/Staff/css/quanlymenustaff.css
@@ -51,3 +51,13 @@
 .buttonTable{
     width: 200px;
 }
+
+.buttonTable1{
+    width: 300px;
+    padding: 10px;
+}
+
+.container_right_footer{
+    float: left;
+    margin-top: 10px;
+}
