lam giao dien staff va manager

--- a/src/main/webapp/views/Staff/css/menuchitietban.css
+++ b/src/main/webapp/views/Staff/css/menuchitietban.css
@@ -59,3 +59,15 @@
 }
 
 /*modal thanh toán*/
+.spinner{
+    width: 50px;
+    text-align: center;
+    border: none;
+}
+
+.btnPM{
+    width: 30px;
+    border: none;
+    outline: none;
+    background-color: azure;
+}
