--- a/src/main/webapp/views/Manager/css/addPost.css
+++ b/src/main/webapp/views/Manager/css/addPost.css
@@ -17,7 +17,7 @@
 
 .modal_add_container{
     width: 800px;
-    height: 500px;
+    height: auto;
     background-color: white;
     border-radius: 15px;
     animation: showModalFadeIn ease .6s;
